# tree-sprites

./: Cargo.toml  log.bat
res/shaders/: circle_shader.wgsl  debug_ui_shader.wgsl  main_shader.wgsl
res/textures/: tile_sprite_sheet.pdn
src/: backup.json  debug.rs  main.rs  todo.md
src/game/: game_state.rs  mod.rs  position.rs  tiles.rs  tree_region_iterator.rs  trees.rs  vector.rs
src/render/: buffer_usages.rs  camera.rs  mod.rs  quad.rs  render_state.rs  sprite_sheet.rs  texture.rs  utils.rs  vertex.rs
src/render/buffer/: geometry_buffer.rs  mod.rs  quad_buffer.rs
src/render/debug_ui/: buffer_usage_meter.rs  mod.rs
src/timer/: average_duration_timer.rs  duration_timer.rs  mod.rs  target_per_second_timer.rs  target_timer.rs
