[package]
name = "tree_sprites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bumpalo = "3.9.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
rand = "0.8.4"
wgpu = "0.11"
winit = "0.25"
